// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Caption /> render Caption with defalut props 1`] = `
<p
  className="mfui-caption mfui-caption_color_default mfui-caption_space_wide mfui-caption_variant_normal mfui-caption_has-margin"
>
  Test caption text
</p>
`;

exports[`<Caption /> render Caption with passed props 1`] = `
<p
  className="mfui-caption mfui-caption_align_right mfui-caption_color_purple mfui-caption_space_wide mfui-caption_variant_normal test"
>
  Test caption text
</p>
`;
